--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Gabriela:regular" rel="stylesheet" />
     <title>Homework-5</title>
 </head>
 
@@ -54,19 +55,19 @@
                 <a href="./tasks/task11.html" target="_blank" class="menu__link"><span>+ Задача 11.</span> Знайти суму 5 непарних чисел, що знаходяться між заданими користувачем числами.</a>
             </li>
             <li class="menu__item">
-                <a href="./tasks/task12.html" target="_blank" class="menu__link"><span>Задача 12.</span> Ігровий автомат. Випадково вибираємо зображення у 3 позиціях. Вибір у кожній позиції вибирається як одне з чотирьох зображень. Вивести ці зображення і повідомити виграш користувача (три перших зображення 100 грн, три других – 200, три третіх – 500, три четвертих зображення – 1000грн). Використати цикли і switch (для вибору зображення за номером).</a>
+                <a href="./tasks/task12.html" target="_blank" class="menu__link"><span>+ Задача 12.</span> Ігровий автомат. Випадково вибираємо зображення у 3 позиціях. Вибір у кожній позиції вибирається як одне з чотирьох зображень. Вивести ці зображення і повідомити виграш користувача (три перших зображення 100 грн, три других – 200, три третіх – 500, три четвертих зображення – 1000грн). Використати цикли і switch (для вибору зображення за номером).</a>
             </li>
             <li class="menu__item">
-                <a href="./tasks/task13.html" target="_blank" class="menu__link"><span>Задача 13.</span> Морський бій. Комп’ютер випадково розташовує одиночний корабель на полі розміром N*M. Маючи К снарядів користувач намагається потопити корабель.</a>
+                <a href="./tasks/task13.html" target="_blank" class="menu__link"><span>+ Задача 13.</span> Морський бій. Комп’ютер випадково розташовує одиночний корабель на полі розміром N*M. Маючи К снарядів користувач намагається потопити корабель.</a>
             </li>
             <li class="menu__item">
-                <a href="./tasks/task14.html" target="_blank" class="menu__link"><span>Задача 14.</span> Каса. Користувачу повідомляють суму, яку йому треба сплатити. Користувач поступово вводить суму грошей до тих пір, поки суми не буде достатньо для оплати товарів (кожного разу користувачу повідомляють, яку ще суму потрібно ввести).</a>
+                <a href="./tasks/task14.html" target="_blank" class="menu__link"><span>+ Задача 14.</span> Каса. Користувачу повідомляють суму, яку йому треба сплатити. Користувач поступово вводить суму грошей до тих пір, поки суми не буде достатньо для оплати товарів (кожного разу користувачу повідомляють, яку ще суму потрібно ввести).</a>
             </li>
             <li class="menu__item">
-                <a href="./tasks/task15.html" target="_blank" class="menu__link"><span>Задача 15.</span> Користувача поступово вводить показники температури протягом року. Знайти середню температуру.</a>
+                <a href="./tasks/task15.html" target="_blank" class="menu__link"><span>+ Задача 15.</span> Користувача поступово вводить показники температури протягом року. Знайти середню температуру.</a>
             </li>
             <li class="menu__item">
-                <a href="./tasks/task16.html" target="_blank" class="menu__link"><span>Задача 16.</span> Користувач поступово вводить прибуток магазину за кожен день протягом N тижнів. Знайти загальну величину прибутку та вивести величину прибутку протягом кожного окремого тижня.</a>
+                <a href="./tasks/task16.html" target="_blank" class="menu__link"><span>+ Задача 16.</span> Користувач поступово вводить прибуток магазину за кожен день протягом N тижнів. Знайти загальну величину прибутку та вивести величину прибутку протягом кожного окремого тижня.</a>
             </li>
         </ul>
     </div>
