--- a/tasks/task14.html
+++ b/tasks/task14.html
@@ -9,11 +9,27 @@
     <h1>Каса. Користувачу повідомляють суму, яку йому треба сплатити. Користувач поступово вводить суму грошей до тих пір, поки суми не буде достатньо для оплати товарів (кожного разу користувачу повідомляють, яку ще суму потрібно ввести).</h1>
 
     <script>
-        //1.Вводимо даннi
+        // Вводимо дані
+        let price = 1000
 
-        //2.Знаходимо результат
+        // Знаходимо результат
+        let paid = 0
+        while (paid < price) {
+            let userPay = parseFloat(prompt('Введіть суму грошей:'))
+            paid += userPay
 
-        //3.Виводимо результат
+            // Виводимо повідомлення про те, яку ще суму треба ввести
+            let leftToPay = price - paid
+            if (leftToPay > 0) {
+                alert("Вам потрібно ввести ще " + leftToPay + " грн.")
+            } else if (leftToPay < 0) {
+                let rest = -leftToPay
+                alert(`Ваша решта ${rest} грн.`)
+            }
+        }
+
+        // Оплата завершена, виводимо повідомлення про це
+        alert("Оплата завершена! Дякуємо за покупку.");
 
     </script>
 </body>
