--- a/tasks/task12.html
+++ b/tasks/task12.html
@@ -11,11 +11,32 @@
     </h1>
 
     <script>
-        // 1. Вводимо дані
-    
-        // 2. Знаходимо результат
-    
-        // 3. Виводимо результат
+
+        //1 - 1       10^(1 - 1)     3       | 1 - 10       10^1     30
+        //2 - 10      10^(2 - 1)     30      | 2 - 100      10^2     300
+        //3 - 100     10^(3 - 1)     300     | 3 - 1000     10^3     3000
+        //4 - 1000    10^(4 - 1)     3000    | 4 - 10000    10^4     30000
+
+        const rangeStart = 1, rangeEnd = 4
+
+        let sum = 0
+        for (let i = 0; i < 3; i++) {
+            let imgNum = rangeStart + Math.floor(Math.random() * (rangeEnd - rangeStart + 1))
+                document.write(`<img src="../img/${imgNum}.png" style="width:100px"/>`)
+            sum += Math.pow(10, imgNum - 1) //sum +=  10 ^ imgNum-1
+        }
+        let win = 0
+        switch (sum) {
+            case 3: win = 100
+                break
+            case 30: win = 200
+                break
+            case 300: win = 500
+                break
+            case 3000: win = 1000
+                break
+        }
+        document.write(`<h2> Виграш = ${win} </h2>`)
 
     </script>
 </body>
